--- a/packages/shared-ui/src/components/Button/Button.module.css
+++ b/packages/shared-ui/src/components/Button/Button.module.css
@@ -7,3 +7,15 @@
   line-height: 1.29;
   color: var(--light-secondary);
 }
+
+.button.register,
+.button.login {
+  width: 100%;
+  height: 44px;
+}
+
+@media screen and (min-width: 768px) {
+  .button.register {
+    width: 280px;
+  }
+}
