--- a/packages/shared-ui/src/components/Input/Input.module.css
+++ b/packages/shared-ui/src/components/Input/Input.module.css
@@ -5,7 +5,7 @@
   padding-left: 18px;
   padding-bottom: 3px;
 
-  border: 1px solid rgba(var(--dark-primary), 0.1);
+  border: 1px solid rgba(var(--dark-primary-rgb), 0.1);
   border-radius: 60px;
   background-color: var(--light-secondary);
 }
@@ -14,5 +14,11 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 1.5;
-  color: rgba(var(--dark-primary), 0.4);
+  color: rgba(var(--dark-primary-rgb), 0.4);
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper.register {
+    flex-grow: 1;
+  }
 }
