--- a/packages/frontend-customer/src/components/User/User.module.css
+++ b/packages/frontend-customer/src/components/User/User.module.css
@@ -16,7 +16,6 @@
   background-color: var(--light-secondary);
   border-radius: 100%;
   border: 1px solid var(--light-quaternary);
-  box-shadow: 0 -1px 7px 0 rgba(var(--shadow-rgb), 0.05);
 }
 
 .counter {
@@ -54,4 +53,28 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 1.4;
+}
+
+.light .userLetter {
+  background-color: var(--light-secondary);
+}
+
+@media screen and (max-width: 767px) {
+  .cart {
+    box-shadow: 0 -1px 7px 0 rgba(var(--shadow-rgb), 0.05);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .cart {
+    width: 46px;
+    height: 46px;
+  }
+
+  .userLetter {
+    width: 44px;
+    height: 44px;
+
+    font-size: 18px;
+  }
 }
