--- a/packages/frontend-customer/src/components/Container/Container.module.css
+++ b/packages/frontend-customer/src/components/Container/Container.module.css
@@ -2,3 +2,17 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    padding-left: 128px;
+    padding-right: 128px;
+  }
+}
