--- a/packages/shared-ui/src/components/Button/Button.module.css
+++ b/packages/shared-ui/src/components/Button/Button.module.css
@@ -8,14 +8,77 @@
   color: var(--light-secondary);
 }
 
+.stroke {
+  border-radius: 60px;
+
+  background-color: transparent;
+  border: 1px solid rgba(var(--accent-primary-rgb), 0.5);
+
+  font-size: 14px;
+  line-height: 1;
+  color: var(--accent-primary);
+}
+
 .button.register,
 .button.login {
   width: 100%;
   height: 44px;
 }
 
+.stroke.logOut {
+  display: none;
+}
+
+.stroke.logOutLight {
+  display: none;
+}
+
+.stroke.logOutLightMob {
+  width: 107px;
+  height: 40px;
+
+  border: 1px solid rgba(var(--light-quaternary-rgb), 0.5);
+  color: var(--light-quaternary);
+}
+
+.stroke.registerHeaderLightMob {
+  width: 119px;
+  height: 40px;
+
+  border: 1px solid rgba(var(--light-quaternary-rgb), 0.5);
+  color: var(--light-quaternary);
+}
+
 @media screen and (min-width: 768px) {
   .button.register {
     width: 280px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .stroke.logOut {
+    display: block;
+    width: 115px;
+  }
+
+  .stroke.logOutLight {
+    display: block;
+    width: 115px;
+
+    border: 1px solid rgba(var(--light-quaternary-rgb), 0.5);
+    color: var(--light-quaternary);
+  }
+
+  .stroke.registerHeader {
+    width: 119px;
+    height: 46px;
+  }
+
+  .stroke.registerHeaderLight {
+    width: 119px;
+    height: 46px;
+
+    border: 1px solid rgba(var(--light-quaternary-rgb), 0.5);
+    color: var(--light-quaternary);
   }
 }
