--- a/packages/shared-ui/src/styles/global.css
+++ b/packages/shared-ui/src/styles/global.css
@@ -41,6 +41,8 @@
   --bg-element-card-mob: url("../assets/images/element-bg-card-mob.png");
   --bg-element-card-tab: url("../assets/images/element-bg-card-tab.png");
   --bg-element-card-desc: url("../assets/images/element-bg-card-desc.png");
+  --bg-element-card-medicine-tab: url("../assets/images/element-bg-card-medicine-tab.png");
+  --bg-element-card-medicine-desc: url("../assets/images/element-bg-card-medicine-desc.png");
   --bg-add-mob: url("../assets/images/add-bg-mob.png");
 }
 
