--- a/packages/frontend-customer/src/components/Container/Container.module.css
+++ b/packages/frontend-customer/src/components/Container/Container.module.css
@@ -14,5 +14,9 @@
   .container {
     padding-left: 128px;
     padding-right: 128px;
+
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
