--- a/packages/shared-ui/src/components/Button/Button.module.css
+++ b/packages/shared-ui/src/components/Button/Button.module.css
@@ -67,6 +67,11 @@
   line-height: 1;
 }
 
+.button.addToCartProductPage {
+  width: 140px;
+  height: 44px;
+}
+
 .button.visit {
   width: 102px;
 }
@@ -78,6 +83,11 @@
   gap: 8px;
 
   width: 116px;
+  height: 44px;
+}
+
+.button.placeOrder {
+  width: 141px;
   height: 44px;
 }
 
