--- a/packages/shared-ui/src/components/Input/Input.module.css
+++ b/packages/shared-ui/src/components/Input/Input.module.css
@@ -10,11 +10,30 @@
   background-color: var(--light-secondary);
 }
 
+.cart .input {
+  border: 1px solid rgba(var(--dark-primary-rgb), 0.2);
+}
+
 .input::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.5;
   color: rgba(var(--dark-primary-rgb), 0.4);
+}
+
+.cart .input::placeholder {
+  color: rgba(var(--dark-primary-rgb), 0.6);
+}
+
+.label {
+  display: block;
+
+  margin-bottom: 8px;
+  padding-left: 18px;
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.29;
 }
 
 @media screen and (min-width: 768px) {
