--- a/packages/frontend-customer/src/components/CartForm/CartForm.module.css
+++ b/packages/frontend-customer/src/components/CartForm/CartForm.module.css
@@ -112,3 +112,44 @@
   font-weight: 600;
   line-height: 1.4;
 }
+
+@media screen and (min-width: 768px) {
+  .form {
+    padding: 40px 78px;
+  }
+
+  .formTitle {
+    font-size: 20px;
+
+    margin-bottom: 14px;
+  }
+
+  .text {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+
+  .inputsWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px 14px;
+  }
+
+  .paymentMethod {
+    padding-top: 40px;
+  }
+
+  .totalWrapper {
+    padding: 20px;
+
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .form {
+    max-width: 628px;
+    padding: 40px;
+  }
+}
