--- a/packages/frontend-customer/src/pages/CartPage/CartPage.module.css
+++ b/packages/frontend-customer/src/pages/CartPage/CartPage.module.css
@@ -11,74 +11,40 @@
   margin-bottom: 40px;
 }
 
-.list {
-  margin-top: 80px;
+@media screen and (max-width: 767px) {
+  .list {
+    margin-top: 80px;
+  }
 }
 
-.item {
-  display: flex;
-  gap: 12px;
+@media screen and (min-width: 768px) {
+  .main {
+    padding-top: 152px;
+    padding-bottom: 120px;
+  }
+
+  .title {
+    margin-bottom: 32px;
+  }
 }
 
-.item:not(:first-child) {
-  padding-top: 20px;
+@media screen and (max-width: 1439px) {
+  .list {
+    margin-top: 64px;
+  }
 }
 
-.item:not(:last-child) {
-  padding-bottom: 20px;
+@media screen and (min-width: 1440px) {
+  .main {
+    padding-top: 172px;
+  }
 
-  border-bottom: 1px solid rgba(var(--dark-primary-rgb), 0.1);
-}
+  .title {
+    margin-bottom: 40px;
+  }
 
-.thumb {
-  border: 1.15px solid var(--light-quaternary);
-  border-radius: 27px;
-
-  overflow: hidden;
-
-  width: 120px;
-  height: 120px;
-}
-
-.info {
-  flex-grow: 1;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-
-  object-fit: cover;
-}
-
-.titlePrice {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-
-  margin-bottom: 18px;
-}
-
-.name {
-  margin-bottom: 8px;
-
-  font-weight: 600;
-  line-height: 1.4;
-}
-
-.desc {
-  font-size: 12px;
-  line-height: 1.17;
-  color: var(--medium-secondary);
-}
-
-.price {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-}
-
-.amountRemove {
-  display: flex;
-  justify-content: space-between;
+  .pageContent {
+    display: flex;
+    justify-content: space-between;
+  }
 }
