--- a/packages/shared-ui/src/components/Button/Button.module.css
+++ b/packages/shared-ui/src/components/Button/Button.module.css
@@ -91,6 +91,11 @@
   height: 44px;
 }
 
+.button.modalAuth {
+  height: 44px;
+  width: 100%;
+}
+
 @media screen and (min-width: 768px) {
   .button.register {
     width: 280px;
